package com.bloodsync.enums;

public enum UserRole {
    ADMIN,
    USER,
    DONOR,
    RECIPIENT,
    HOSPITAL,
    PATIENT
} 